finished styling buttons

--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,7 @@ body {
 }
 
 .info_box {
+    display: none;
     width: 540px;
     background: #fff;
     border-radius: 5px;
@@ -81,14 +82,24 @@ body {
     font-size: 16px;
     font-weight: 500;
     cursor: pointer;
+    transition: all 0.3s ease;
 }
 
 .buttons button.restart {
-    color: rgb(94, 131, 7);
-    border-color: rgb(94, 131, 7);
+    color: #fff;
+    background: rgb(94, 131, 7);
+}
+
+.buttons button.restart:hover {
+    background:rgb(62, 87, 4);
 }
 
 .buttons button.quit {
     color: rgb(94, 131, 7);
     border-color: rgb(94, 131, 7);
+}
+
+.buttons button.quit:hover {
+    color: #fff;
+    background: rgb(94, 131, 7);
 }
