--- a/assets/style.css
+++ b/assets/style.css
@@ -1,161 +1,26 @@
+:root {
+    background-color:seagreen;
+}
+
 *{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 15px;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-/*body {
-    background: rgb(94, 131, 7);
-}*/
-
-.start_btn, 
-.info_box,
-.quiz_box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+h1 {
+    font-size: 5.4rem;
+    color: seashell;
+    margin-bottom: 5rem;
 }
 
-
-/* Start Button Styling */
-.start_btn button {
-    font-size: 25px;
-    font-weight: 500;
-    color: rgb(94, 131, 7);
-    padding: 15px 30px;
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    background: #fff;
-    cursor: pointer;
+h2 {
+    font-size: 4.2rem;
+    margin-bottom: 4rem;
 }
 
-.info_box {
-    display: none;
-    width: 540px;
-    background: #fff;
-    border-radius: 5px;
-}
-
-/* styles the top header*/ 
-.info_box .info_title {
-    height: 60px;
-    width: 100%;
-    border-bottom: 1px solid grey;
-    display: flex;
-    align-items: center;
-    padding: 0 35px;
-    font-size: 20px;
-    font-weight: 600;
-}
-
-.info_box .info_list {
-    padding: 15px 35px;
-}
-
-.info_box .info_list .info {
-    margin: 5px 0;
-    font-size: 17px;
-}
-
-/* changes the "20 seconds" in the first list */
-.info_box .info_list .info span {
-    font-weight: 600;
-    color: rgb(94, 131, 7);
-}
-
-.info_box .buttons {
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding: 0 35px;
-    border-top: 1px solid grey;
-}
-
-.info_box .buttons button {
-    margin: 0 5px;
-    height: 40px;
-    width: 100px;
-    border: 1px solid transparent;
-    background: #fff;
-    border-radius: 5px;
-    font-size: 16px;
-    font-weight: 500;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.buttons button.restart {
-    color: #fff;
-    background: rgb(94, 131, 7);
-}
-
-.buttons button.restart:hover {
-    background:rgb(62, 87, 4);
-}
-
-.buttons button.quit {
-    color: rgb(94, 131, 7);
-    border-color: rgb(94, 131, 7);
-}
-
-.buttons button.quit:hover {
-    color: #fff;
-    background: rgb(94, 131, 7);
-}
-
-.quiz_box {
-    width: 550px;
-    background: #fff;
-    border-radius: 5px;
-}
-
-.quiz_box header {
-    height: 70px;
-    padding: 0 30px;
-    background: #fff;
-    display: none;
-    align-items: center;
-    justify-content: space-between;
-    border-radius: 5px 5px 0 0;
-}
-
-.quiz_box header .title {
-    font-size: 20px;
-    font-weight: 600;
-}
-
-.quiz_box header .timer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 145px;
-    height: 45px;
-    background: #cce5ff;
-    border: 1px solid #b8daff;
-    border-radius: 5px;
-    padding: 0 8px;
-}
-
-.quiz_box header .timer .time_text {
-    font-weight: 400;
-    font-size: 17px;
-    user-select: none;
-}
-
-.quiz_box header .timer .timer_sec {
-    font-size: 18px;
-    font-weight: 500;
-    background: rgb(94, 131, 7);
-    height: 30px;
-    width: 45px;
-    color: #fff;
-    text-align: center;
-    line-height: 30px;
-    border-radius: 5px;
-    border: 1px solid rgb(94, 131, 7);
-    user-select: none;
+.container {
+    width: 100vw;
 }
