--- a/assets/style.css
+++ b/assets/style.css
@@ -23,4 +23,73 @@ h2 {
 
 .container {
     width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 80rem;
+    margin: 0 auto;
+    padding: 2rem;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.flex-center {
+    justify-content: center;
+    align-items: center;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.hidden {
+    display: none;
+}
+
+.btn {
+    font-size: 2.4rem;
+    padding: 2rem 0;
+    width: 30rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    text-decoration: aqua;
+    color: #000;
+    box-shadow: 0 0.4rem 1.4rem 0;
+    background: linear-gradient(90deg, #fff, 0%, aqua) 100%;
+    border-radius: 4px;
+}
+
+.btn:hover {
+    cursor: pointer;
+    box-shadow: lightgreen;
+    transition: transform 150ms;
+    transform: scale(1.03);
+}
+
+.btn[disabled]:hover {
+    cursor: not-allowed;
+    box-shadow: none;
+    transform: none;
+}
+
+#highscore-btn {
+    background: linear-gradient(90deg, #fff, 0%, lawngreen) 100%;
+    border-radius: 4px;;
+}
+
+#highscore-btn:hover {
+  box-shadow: 0 0.4rem 1.4rem 0;  
+}
+
+.fa-crown {
+    font-size: 2.5rem;
+    margin-left: 1rem;
 }
