--- a/assets/style.css
+++ b/assets/style.css
@@ -81,7 +81,7 @@ h2 {
 }
 
 #highscore-btn {
-    background: linear-gradient(90deg, #fff, 0%, lawngreen) 100%;
+    background: linear-gradient(90deg, #fff, 0%, forestgreen) 100%;
     border-radius: 4px;;
 }
 
